# executor-node

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml
scripts/: package-lock.json  package.json  sas-setup.ts
src/: config.rs  error.rs  main.rs  server.rs
src/attestation/: handler.rs  mod.rs  sas.rs
src/auth/: api_key.rs  mod.rs  rate_limit.rs
src/challenge/: handler.rs  mod.rs  phrase_gen.rs  registry.rs  word_dict.rs
src/integrator/: mod.rs  tracker.rs  wallet_attempts.rs
src/listener/: event_monitor.rs
src/relayer/: commitment_registry.rs  handler.rs  mod.rs  transaction.rs
src/solana/: client.rs  instructions.rs  mod.rs  pda.rs
src/status/: handler.rs  mod.rs  status_metrics.rs
src/validation/: handler.rs
